Fixed gap between sidebar and content

--- a/app/assets/stylesheets/courses.css
+++ b/app/assets/stylesheets/courses.css
@@ -15,7 +15,7 @@ html {
 
 .main {
     margin-top: 1.5em;
-    margin-left: 300px;
+    margin-left: 1em;
     margin-right: 60px;
     font-size: 28px;
     padding: 10px 0px;
